# llm-trailblazers

./: .gitignore  Makefile  pyproject.toml  requirements-train.txt
notebooks/: wk1.ipynb
