[tool.poetry]
name = "src"
version = "0.0.1"
description = "LLM Trailblazers"
authors = ["Charlene Leong <charleneleong84@gmail.com>"]
package-mode = false
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
## Models
transformers = "^4.44.2" # https://github.com/huggingface/transformers/releases
scikit-learn = "^1.5.1" # https://github.com/scikit-learn/scikit-learn/releases
## Data
pandas = "^2.2.0" # https://pandas.pydata.org/docs/whatsnew/index.html
numpy = "^1.24.0" # https://github.com/numpy/numpy/releases
## Logging and config
## loguru = "^0.7.2 " # https://github.com/Delgan/loguru/releases
## typer = "^0.12.3" # https://github.com/tiangolo/typer/releases
## hydra-core = "^1.3.2" # https://github.com/facebookresearch/hydra/releases

[tool.poetry.group.serve.dependencies]
## Downloading with torch[cpu] still pulls in cuda deps; can switch more elegant package mgmt in future
## torch = { url="https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.3.1%2Bcpu.cxx11.abi-cp311-cp311-linux_x86_64.whl" } # https://github.com/pytorch/pytorch/releases
# torch = { version = "~=2.3.1", extras = ["cpu"] }  # https://github.com/pytorch/pytorch/releases
fastapi = "^0.112.2" # https://github.com/fastapi/fastapi/releases
uvicorn = "^0.30.6" # https://github.com/encode/uvicorn/releases

[tool.poetry.group.data.dependencies]
## Data and visualisation
matplotlib = "^3.8.4" # https://matplotlib.org/stable/users/release_notes.html
## ray = "^2.10.0" # https://github.com/ray-project/ray/releases

[tool.poetry.group.train.dependencies]
torch = { version = "~=2.3.1", extras = ["cu12"] }  # https://github.com/pytorch/pytorch/releases

## Experiment management
## hydra-colorlog = "^1.2.0" # https://github.com/facebookresearch/hydra/releases
## wandb = "^0.16.6" # https://github.com/wandb/client/releases
## torchmetrics = "^1.3.2" # https://github.com/Lightning-AI/torchmetrics/releases

## Tests dependencies
[tool.poetry.group.tests.dependencies]
## pytest = "^8.3.2" # https://github.com/pytest-dev/pytest/releases/
## pytest-cov = "^5.0.0" # https://github.com/pytest-dev/pytest-cov/tags

## Dev dependencies
[tool.poetry.dev-dependencies]
## dvc = "^3.49.0" # https://github.com/iterative/dvc/release
## dvc-s3 = "^3.1.0" # https://github.com/iterative/dvc-s3/release
jupyterlab = "^4.1.6" # https://github.com/jupyterlab/jupyterlab/releases/
ipywidgets = "^8.1.2" # https://github.com/jupyter-widgets/ipywidgets/releases
ipdb = "^0.13.13" # https://pypi.org/project/ipdb/
ruff = "^0.3.1" # https://github.com/astral-sh/ruff/releases
nbqa = "^1.8.3" # https://github.com/nbQA-dev/nbQA/blob/main/docs/history.rst
## nvitop = "^1.3.2" # https://github.com/XuehaiPan/nvitop/releases
pre-commit = "^3.7.0" # https://github.com/pre-commit/pre-commit/releases/

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = 'src.run:train'

[tool.coverage.run]
source = ['src']
omit = ["*/__init__.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-svv --cov=src"
